--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "client:dev": "cd client && npm start",
     "install-all": "npm install && cd backend && npm install && cd ../client && npm install",
     "build": "cd client && npm run build",
-    "test": "cd backend && npm test"
+    "test": "cd backend && npm test",
+    "postinstall": "cd backend && npm install && cd ../client && npm install"
   },
   "devDependencies": {
     "concurrently": "^8.2.0"
