--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "test:db": "node ../test-db-connection.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
